@@ -61,6 +61,11 @@ define ('DPI', 72.0);
  */
 define ('TEXTDOMAIN', 'scorerender');
 
+/**
+ * Regular expression for cached images
+ */
+define ('REGEX_CACHE_IMAGE', '/^sr-\w+-[0-9A-Fa-f]{32}\.png$/');
+
 /*
  * Error constants
  */
@@ -112,6 +117,11 @@ define ('ERR_LENGTH_EXCEEDED'             , -7);
  */
 define ('ERR_INTERNAL_CLASS'              , -8);
 
+/**
+ * Error constant representing some essential binary missing.
+ */
+define ('ERR_PROGRAM_MISSING'             , -9);
+
 
 /*
  * How error is handled when rendering failed
@@ -158,25 +168,29 @@ $notations = array (
 		'starttag'    => '[abc]',
 		'endtag'      => '[/abc]',
 		'classname'   => 'abcRender',
-		'includefile' => 'class.abc.inc.php'),
+		'includefile' => 'class.abc.inc.php',
+		'progs'       => array ('ABCM2PS_BIN')),
 	'guido'    => array (
 		'regex'       => '~\[guido\](.*?)\[/guido\]~si',
 		'starttag'    => '[guido]',
 		'endtag'      => '[/guido]',
 		'classname'   => 'guidoRender',
-		'includefile' => 'class.guido.inc.php'),
+		'includefile' => 'class.guido.inc.php',
+		'progs'       => array ()),
 	'lilypond' => array (
 		'regex'       => '~\[lilypond\](.*?)\[/lilypond\]~si',
 		'starttag'    => '[lilypond]',
 		'endtag'      => '[/lilypond]',
 		'classname'   => 'lilypondRender',
-		'includefile' => 'class.lilypond.inc.php'),
+		'includefile' => 'class.lilypond.inc.php',
+		'progs'       => array ('LILYPOND_BIN')),
 	'mup'      => array (
 		'regex'       => '~\[mup\](.*?)\[/mup\]~si',
 		'starttag'    => '[mup]',
 		'endtag'      => '[/mup]',
 		'classname'   => 'mupRender',
-		'includefile' => 'class.mup.inc.php'),
+		'includefile' => 'class.mup.inc.php',
+		'progs'       => array ('MUP_BIN')),
 );
 
 require_once('class.scorerender.inc.php');
@@ -257,7 +271,10 @@ if (!function_exists ('array_intersect_key'))
  */
 function scorerender_init_textdomain ()
 {
+	// load_textdomain() already does file existance checking
 	load_plugin_textdomain (TEXTDOMAIN, PLUGINDIR . DIRECTORY_SEPARATOR . plugin_basename (dirname (__FILE__)));
+	load_plugin_textdomain (TEXTDOMAIN);
+	load_plugin_textdomain (TEXTDOMAIN, ABSPATH . LANGDIR);
 }
 
 /**
@@ -353,7 +370,7 @@ function scorerender_get_num_of_images ()
 	{
 		while (false !== ($file = readdir ($handle)))
 		{
-			if (preg_match ('/^[0-9A-Fa-f]{32}\.png$/', $file))
+			if (preg_match (REGEX_CACHE_IMAGE, $file))
 				$count++;
 		}
 		closedir ($handle);
@@ -405,7 +422,7 @@ function scorerender_remove_cache ()
 		while (false !== ($file = readdir ($handle)))
 		{
 			// FIXME: how to decide if some image is generated by plugin?
-			if (preg_match ('/^[0-9A-Fa-f]{32}\.png$/', $file))
+			if (preg_match (REGEX_CACHE_IMAGE, $file))
 				unlink ($scorerender_options['CACHE_DIR'] . DIRECTORY_SEPARATOR . $file);
 		}
 		closedir ($handle);
@@ -443,12 +460,15 @@ function scorerender_generate_html_error ($errcode)
 			return sprintf (__('[%s: The external rendering application failed!]', TEXTDOMAIN),
 				__('ScoreRender Error', TEXTDOMAIN));
 			                                        // '<br /><textarea cols=80 rows=10 READONLY>' .
-			                                        // $render->getCommandOutput() . '</textarea>');
+			                                        // $render->get_command_output() . '</textarea>');
 		case ERR_LENGTH_EXCEEDED:
 			return sprintf (__('[%s: Content length limit exceeded!]', TEXTDOMAIN),
 				__('ScoreRender Error', TEXTDOMAIN));
 		case ERR_INTERNAL_CLASS:
 			return sprintf (__('[%s: Internal class initialization error!]', TEXTDOMAIN),
+				__('ScoreRender Error', TEXTDOMAIN));
+		case ERR_PROGRAM_MISSING:
+			return sprintf (__('[%s: Some essential program is missing!]', TEXTDOMAIN),
 				__('ScoreRender Error', TEXTDOMAIN));
 	}
 }
@@ -474,17 +494,15 @@ function scorerender_process_content ($render)
 				return '';
 
 			case ON_ERR_SHOW_FRAGMENT:
-				foreach (array_values ($notations) as $notation)
-				{
-					if (strtolower (get_class ($render)) === strtolower ($notation['classname']))
-					{
-						return $notation['starttag'] . "\n" .
-							$render->getMusicFragment() . "\n" .
-							$notation['endtag'];
-					}
-				}
+				$name = $render->get_notation_name ();
+
 				// Shouldn't reach here
-				return '[ScoreRender Error: Unknown notation type!]';
+				if (false === $name)
+					return '[ScoreRender Error: Unknown notation type!]';
+
+				return $notations[$name]['starttag'] . "\n" .
+					$render->get_music_fragment() . "\n" .
+					$notatios[$name]['endtag'];
 
 			default:
 				return scorerender_generate_html_error ($result);
@@ -503,23 +521,22 @@ function scorerender_process_content ($render)
 		          __('Music fragment', TEXTDOMAIN), __('Music fragment', TEXTDOMAIN),
 		          $scorerender_options['CACHE_URL'], $result);
 
-		foreach (array_values ($notations) as $notation)
-		{
-			if (strtolower (get_class ($render)) === strtolower ($notation['classname']))
-			{
-				$content = $notation['starttag'] . "\n" .
-					$render->getMusicFragment() . "\n" .
-					$notation['endtag'];
-				break;
-			}
-		}
+		$name = $render->get_notation_name ();
+
+		// Shouldn't reach here
+		if (false === $name)
+			return '[ScoreRender Error: Unknown notation type!]';
+
+		$content = $notations[$name]['starttag'] . "\n" .
+			$render->get_music_fragment() . "\n" .
+			$notatios[$name]['endtag'];
 
 		$html .= sprintf ("<input type='hidden' name='code' value='%s'>\n</form>\n",
 			rawurlencode (htmlentities ($content, ENT_NOQUOTES, get_bloginfo ('charset'))));
 	}
 	else
 	{
-		$html .= sprintf ("<img name='music_image' style='vertical-align: bottom' class='scorerender-image' title='%s' alt='%s' src='%s/%s' />\n",
+		$html .= sprintf ("<img style='vertical-align: bottom' class='scorerender-image' title='%s' alt='%s' src='%s/%s' />\n",
 		          __('Music fragment', TEXTDOMAIN), __('Music fragment', TEXTDOMAIN),
 		          $scorerender_options['CACHE_URL'], $result);
 	}
@@ -527,7 +544,7 @@ function scorerender_process_content ($render)
 	if ($scorerender_options['TRANSPARENT_IMAGE'] &&
 	    $scorerender_options['SHOW_IE_TRANSPARENCY_WARNING']) 
 	{
-		$html .= '<br /><!--[if lt IE 7]>' . __('<font color="red">Warning</font>: Internet Explorer &lt; 7 is incapable of displaying transparent PNG image, so the above image may not show properly in your browser as expected. Please either use any other browser such as <a href="http://www.getfirefox.com/" target="_blank">Firefox</a> or <a href="http://www.opera.com/" target="_blank">Opera</a>, or at least upgrade to IE 7. Alternatively, ask site admin to disable transparent image.', TEXTDOMAIN) . "<![endif]-->\n";
+		$html .= '<br /><!--[if lt IE 7]><span style="font-size: smaller;">' . __('(<font color="red">Warning</font>: Internet Explorer &lt; 7 is incapable of displaying transparent PNG image, so the above image may not show properly in your browser as expected. Please either use any other browser such as <a href="http://www.getfirefox.com/" target="_blank">Firefox</a> or <a href="http://www.opera.com/" target="_blank">Opera</a>, or at least upgrade to IE 7. Alternatively, ask site admin to disable transparent image.)', TEXTDOMAIN) . "</span><![endif]-->\n";
 	}
 
 	return $html;
@@ -544,7 +561,7 @@ function scorerender_process_content ($render)
  * If no PHP class exists corresponding to certain notation, then 
  * unconverted content is returned.
  *
- * @uses ScoreRender::setMusicFragment
+ * @uses ScoreRender::set_music_fragment
  * @param array $matches Matched music fragment in posts or comments. This variable must be supplied by {@link preg_match preg_match()} or {@link preg_match_all preg_match_all()}. Alternatively invoke this function with {@link preg_replace_callback preg_replace_callback()}.
  * @return string Either HTML content containing rendered image, or HTML error message in case rendering failed.
  */
@@ -562,7 +579,7 @@ function scorerender_filter ($matches)
 		{
 			// TODO: Should do it like what a class should behave
 			$render = new $notation['classname'] ($scorerender_options);
-			$render->setMusicFragment ($input);
+			$render->set_music_fragment ($input);
 			break;
 		}
 	}
@@ -589,11 +606,12 @@ function scorerender_content ($content)
 {
 	global $scorerender_options, $notations;
 
-	if (! is_executable ($scorerender_options['CONVERT_BIN'])) return $content;
-
 	$regex_list = array();
 	foreach (array_values ($notations) as $notation)
 	{
+		// unfilled program name = disable support
+		foreach ($notation['progs'] as $prog)
+			if (empty ($scorerender_options[$prog]) continue;
 		$regex_list[] = $notation['regex'];
 	};
 
@@ -619,11 +637,12 @@ function scorerender_comment ($content)
 
 	if (! $scorerender_options['COMMENT_ENABLED']) return $content;
 
-	if (! is_executable ($scorerender_options['CONVERT_BIN'])) return $content;
-
 	$regex_list = array();
 	foreach (array_values ($notations) as $notation)
 	{
+		// unfilled program name = disable support
+		foreach ($notation['progs'] as $prog)
+			if (empty ($scorerender_options[$prog]) continue;
 		$regex_list[] = $notation['regex'];
 	};
 
@@ -744,11 +763,13 @@ function scorerender_update_options ()
 		'wrong_content_length'     => array ('level' => MSG_WARNING, 'content' => __('Content length is not a non-negative integer. Value discarded.', TEXTDOMAIN)),
 		'wrong_frag_per_comment'   => array ('level' => MSG_WARNING, 'content' => __('Fragment per comment is not a non-negative integer. Value discarded.', TEXTDOMAIN)),
 		'wrong_image_max_width'    => array ('level' => MSG_WARNING, 'content' => __('Image maximum width must be positive integer >= 72. Value discarded.', TEXTDOMAIN)),
-		'convert_bin_problem'      => array ('level' => MSG_FATAL  , 'content' => __('<tt>convert</tt> utility is NOT defined or NOT executable! The plugin will stop working.', TEXTDOMAIN)),
+		'convert_bin_problem'      => array ('level' => MSG_FATAL  , 'content' => __('<tt>convert</tt> program is NOT defined or NOT executable! The plugin will stop working.', TEXTDOMAIN)),
+		'lilypond_bin_problem'     => array ('level' => MSG_WARNING, 'content' => sprintf (__('%s program does not look like a correct one. %s support will most likely stop working.', TEXTDOMAIN), '<tt>lilypond</tt>', 'LilyPond')),
+		'mup_bin_problem'          => array ('level' => MSG_WARNING, 'content' => sprintf (__('%s program does not look like a correct one. %s support will most likely stop working.', TEXTDOMAIN), '<tt>mup</tt>', 'Mup')),
 	);
 
 	if ( function_exists ('current_user_can') && !current_user_can ('manage_options') )
-		die (__('Cheatin&#8217; uh?', TEXTDOMAIN));
+		wp_die (__('Cheatin&#8217; uh?', TEXTDOMAIN));
 
 	/*
 	 * general options
@@ -772,7 +793,9 @@ function scorerender_update_options ()
 	if ( empty ($newopt['CACHE_URL']) )
 		$errmsgs[] = 'cache_url_undefined';
 
-	if ( empty ($newopt['CONVERT_BIN']) || ! is_executable ($newopt['CONVERT_BIN']) )
+	if ( empty ($newopt['CONVERT_BIN']) ||
+	     ! is_executable ($newopt['CONVERT_BIN']) ||
+	     ! ScoreRender::is_imagemagick_usable ($newopt['CONVERT_BIN']))
 		$errmsgs[] = 'convert_bin_problem';
 
 	$newopt['SHOW_SOURCE']       = isset ($newopt['SHOW_SOURCE']);
@@ -780,21 +803,33 @@ function scorerender_update_options ()
 	$newopt['TRANSPARENT_IMAGE'] = isset ($newopt['TRANSPARENT_IMAGE']);
 	$newopt['COMMENT_ENABLED']   = isset ($newopt['COMMENT_ENABLED']);
 
-	if (!ctype_digit ($newopt['CONTENT_MAX_LENGTH'])) {
+	if (!ctype_digit ($newopt['CONTENT_MAX_LENGTH']))
+	{
 		$errmsgs[] = 'wrong_content_length';
 		unset ($newopt['CONTENT_MAX_LENGTH']);
 	}
 
-	if (!ctype_digit ($newopt['FRAGMENT_PER_COMMENT'])) {
+	if (!ctype_digit ($newopt['FRAGMENT_PER_COMMENT']))
+	{
 		$errmsgs[] = 'wrong_frag_per_comment';
 		unset ($newopt['FRAGMENT_PER_COMMENT']);
 	}
 
-	if (!ctype_digit ($newopt['IMAGE_MAX_WIDTH']) || ($newopt['IMAGE_MAX_WIDTH'] < (1 * DPI))) {
+	if (!ctype_digit ($newopt['IMAGE_MAX_WIDTH']) || ($newopt['IMAGE_MAX_WIDTH'] < (1 * DPI)))
+	{
 		$errmsgs[] = 'wrong_image_max_width';
 		unset ($newopt['IMAGE_MAX_WIDTH']);
 	}
 
+	if (! empty ($newopt['LILYPOND_BIN']) && ! lilypondRender::is_lilypond_usable ($newopt['LILYPOND_BIN']))
+	{
+		$errmsgs[] = 'lilypond_bin_problem';
+	}
+
+	if (! empty ($newopt['MUP_BIN']) && ! mupRender::is_mup_usable ($newopt['MUP_BIN']))
+	{
+		$errmsgs[] = 'mup_bin_problem';
+	}
 
 	$scorerender_options = array_merge ($scorerender_options, $newopt);
 	update_option ('scorerender_options', $scorerender_options);
